--- a/Currency Browser/src/com/practice/controllers/resources/BrowseWindow.fxml
+++ b/Currency Browser/src/com/practice/controllers/resources/BrowseWindow.fxml
@@ -1,65 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.practice.controllers.BrowseController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.practice.controllers.BrowseController">
    <children>
       <Pane prefHeight="464.0" prefWidth="456.0">
          <children>
-            <TabPane layoutX="-3.0" layoutY="-1.0" prefHeight="417.0" prefWidth="573.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane fx:id="tabPane" layoutX="-3.0" layoutY="-1.0" prefHeight="417.0" prefWidth="573.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="PKO Bank Polski">
+                <Tab fx:id="PKOTab" text="PKO Bank Polski S.A.">
                      <content>
                         <AnchorPane prefHeight="383.0" prefWidth="573.0">
                            <children>
                               <Button fx:id="buttonBack" layoutX="489.0" layoutY="340.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="72.0" text="&lt; Back" />
+                              <TableView fx:id="PKOBrowseTable" layoutX="4.0" layoutY="-1.0" prefHeight="333.0" prefWidth="573.0">
+                                <columns>
+                                  <TableColumn fx:id="PKOCurrencyName" prefWidth="124.0" text="Name" />
+                                  <TableColumn fx:id="PKOSaleValue" prefWidth="220.0" text="Sale" />
+                                    <TableColumn fx:id="PKOPurchaseValue" prefWidth="226.0" text="Purchase" />
+                                </columns>
+                              </TableView>
+                              <Separator layoutX="2.0" layoutY="335.0" prefHeight="1.0" prefWidth="573.0" />
                            </children>
                         </AnchorPane>
                      </content>
                   </Tab>
-                <Tab text="Santander Bank Polska S.A.">
+                <Tab fx:id="STDTab" text="Santander Bank Polski S.A.">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
                                <Button layoutX="489.0" layoutY="340.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="72.0" text="&lt; Back" />
+                               <TableView fx:id="STDBrowseTable" layoutX="4.0" layoutY="-1.0" prefHeight="333.0" prefWidth="573.0">
+                                   <columns>
+                                       <TableColumn fx:id="STDCurrencyName" prefWidth="124.0" text="Name" />
+                                       <TableColumn fx:id="STDSaleValue" prefWidth="220.0" text="Sale" />
+                                       <TableColumn fx:id="STDPurchaseValue" prefWidth="226.0" text="Purchase" />
+                                   </columns>
+                               </TableView>
+                               <Separator layoutX="2.0" layoutY="335.0" prefHeight="1.0" prefWidth="573.0" />
                            </children>
                         </AnchorPane>
                      </content>
                   </Tab>
-                  <Tab text="PEKO S.A.">
+                  <Tab fx:id="INGTab" text="ING Bank Śląski">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
                                <Button layoutX="489.0" layoutY="340.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="72.0" text="&lt; Back" />
+                               <TableView fx:id="INGBrowseTable" layoutX="4.0" layoutY="-1.0" prefHeight="333.0" prefWidth="573.0">
+                                   <columns>
+                                       <TableColumn fx:id="INGCurrencyName" prefWidth="124.0" text="Name" />
+                                       <TableColumn fx:id="INGSaleValue" prefWidth="220.0" text="Sale" />
+                                       <TableColumn fx:id="INGPurchaseValue" prefWidth="226.0" text="Purchase" />
+                                   </columns>
+                               </TableView>
+                               <Separator layoutX="2.0" layoutY="335.0" prefHeight="1.0" prefWidth="573.0" />
                            </children></AnchorPane>
                     </content>
                   </Tab>
-                  <Tab text="ING Bank Śląski">
+                  <Tab fx:id="MBKTab" text="mBank">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
                                <Button layoutX="489.0" layoutY="340.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="72.0" text="&lt; Back" />
-                           </children></AnchorPane>
-                    </content>
-                  </Tab>
-                  <Tab text="mBank">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                               <Button layoutX="489.0" layoutY="340.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="72.0" text="&lt; Back" />
-                           </children></AnchorPane>
-                    </content>
-                  </Tab>
-                  <Tab text="Bank Milenium">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                               <Button layoutX="489.0" layoutY="340.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="72.0" text="&lt; Back" />
+                               <TableView fx:id="MBKBrowseTable" layoutX="4.0" layoutY="-1.0" prefHeight="333.0" prefWidth="573.0">
+                                   <columns>
+                                       <TableColumn fx:id="MBKCurrencyName" prefWidth="124.0" text="Name" />
+                                       <TableColumn fx:id="MBKSaleValue" prefWidth="220.0" text="Sale" />
+                                       <TableColumn fx:id="MBKPurchaseValue" prefWidth="226.0" text="Purchase" />
+                                   </columns>
+                               </TableView>
+                               <Separator layoutX="2.0" layoutY="335.0" prefHeight="1.0" prefWidth="573.0" />
                            </children></AnchorPane>
                     </content>
                   </Tab>
